2008-05-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/users_guide.doc: Minor documentation fix in Users
	Guide

	There is no such functions as swap_row() and swap_col() in IT++.
	swap_rows() and swap_cols() are the proper ones. This fixes bug
	[1968377]. Thanks to Allan Murray for reporting this issue.

2008-05-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/bessel/hyperg.cpp, itpp/base/itfile.cpp,
	itpp/base/random.cpp, itpp/comm/punct_convcode.cpp,
	itpp/fixed/cfix.cpp, itpp/fixed/fix.cpp, itpp/srccode/pnm.cpp,
	itpp/stat/mog_diag_em.cpp, itpp/stat/mog_diag_kmeans.cpp,
	itpp/stat/mog_generic.cpp: Fix GCC 4.3 warnings on "ambiguous
	else" due to missing braces

	The latest GCC compiler is much more picky when it comes to if/else
	statements without explicit braces. This results in a lot of warnings
	when "-Wall" flag is used. This patch adds missing braces or
	refactors code for which such warnings were reported by GCC 4.3.

2008-05-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac.in: Set CXXFLAGS_DEBUG to CXXFLAGS when
	--enable-debug is not used

	This new behaviour is consistent with setting the same set of
	libraries for both the debug and optimised cases, when
	--enable-debug is not used. Besides, the CXXFLAGS_DEBUG variable
	is now documented when "configure --help" is used.

2008-05-09  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/tutorial/matlab_itpp.doc: Documentation improvement

2008-04-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/modulator_nd_test.cpp: Cosmetic fix - remove doubled
	semicolon

	* Unify coding style using an astyle source code formatter

	This huge patch is intended to unify the coding style for all IT++
	source and header files. The formatting has been performed with
	the astyle v1.22 program, using the configuration stored in
	extras/astylerc file.

2008-04-15  Adam Piatyszek  <ediap@users.sourceforge.net>
